apps/core-services/errorpages/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: errorpages
  namespace: core-services
spec:
  tls:
  - secretName: cert-dev.skyloft.cc
  rules:
  - host: dev.skyloft.cc
    http:
      paths:
      - path: /notfound
        pathType: Prefix
        backend:
          service:
            name: errorpages
            port:
              number: 80
